[package]
name = "veml6040"
version = "0.1.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/veml6040-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the VEML6040 RGBW color light sensor."
readme = "README.md"
keywords = ["color", "sensor", "i2c", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/veml6040-rs"
documentation = "https://docs.rs/veml6040"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[badges.travis-ci]
branch = "master"
repository = "eldruin/veml6040-rs"

[dependencies]
embedded-hal = "0.2"

[dev-dependencies]
linux-embedded-hal = "0.2"
embedded-hal-mock = "0.4"

[profile.release]
lto = true
